k8s/applications/dev/debian-debug/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debian-debug
  namespace: debian-debug
spec:
  strategy: {type: Recreate}
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: debian-debug
      app.kubernetes.io/version: trixie
      app.kubernetes.io/component: debug-container
      app.kubernetes.io/part-of: debian-debug
      app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      namespace: debian-debug
      labels:
        app.kubernetes.io/name: debian-debug
        app.kubernetes.io/version: trixie
        app.kubernetes.io/component: debug-container
        app.kubernetes.io/part-of: debian-debug
        app.kubernetes.io/managed-by: kustomize
    spec:
      serviceAccountName: debian-debug
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: debian-debug
          # Dockerfile: https://github.com/sebastka/containers/blob/main/apps/debian-debug/Dockerfile
          image: ghcr.io/sebastka/debian-debug:2026.9.19@sha256:27fe28599b50135e909cf2c5b415a07c05662d4ce569a842722679f357525e5b
          command: [/bin/sh, -c]
          args:
            - |
              set -eux
              while [ ! -f /tmp/stop ]; do sleep 5; done
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 32Mi}
            limits: {memory: 128Mi}
          volumeMounts:
            - {name: tmp-volume, mountPath: /tmp}
            # - {name: from-volume, mountPath: /mnt/from, readOnly: true}
            # - {name: to-volume, mountPath: /mnt/to}
      volumes:
        - {name: tmp-volume, emptyDir: {}}
      #   - {name: from-volume, persistentVolumeClaim: {claimName: from-pvc}}
      #   - {name: to-volume, persistentVolumeClaim: {claimName: to-pvc}}
