k8s/applications/dev/debian-debug/CiliumNetworkPolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-debian-debug-egress
  namespace: debian-debug
spec:
  endpointSelector: {matchLabels: {app.kubernetes.io/name: debian-debug}}
  egress:
    - {toEntities: [world, cluster, host]}  # = all
